Add search_index API route (#6683)
