# src/backend/api/handlers/helpers/model_properties.py
@@ -44,6 +44,16 @@ simple_match_properties = [
     "predicted_time",
 ]
 
+search_team_properties = [
+    "key",
+    "nickname",
+]
+
+search_event_properties = [
+    "key",
+    "name",
+]
+
 
 def filter_event_properties(events: List[EventDict], model_type: ModelType) -> List:
     if not events:
@@ -54,6 +64,10 @@ def filter_event_properties(events: List[EventDict], model_type: ModelType) -> L
         ]
     elif model_type == "keys":
         return [event["key"] for event in events]
+    elif model_type == "search":
+        return [
+            {key: event[key] for key in search_event_properties} for event in events
+        ]
     else:
         raise Exception("Unknown model_type: {}".format(model_type))
 
@@ -65,6 +79,8 @@ def filter_team_properties(teams: List[TeamDict], model_type: ModelType) -> List
         return [{key: team[key] for key in simple_team_properties} for team in teams]
     elif model_type == "keys":
         return [team["key"] for team in teams]
+    elif model_type == "search":
+        return [{key: team[key] for key in search_team_properties} for team in teams]
     else:
         raise Exception("Unknown model_type: {}".format(model_type))
 
